--- a/src/app/fr-report/fr-report.component.html
+++ b/src/app/fr-report/fr-report.component.html
@@ -253,7 +253,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="didom">
+            <input class="form-check-input" type="radio" name="dtype" id="didom" value="type_domestic">
             <label class="form-check-label" for="didom">
               <h3><img src="/assets/img/di-dom.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Domestiques</h3>
@@ -265,7 +265,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="dimed">
+            <input class="form-check-input" type="radio" name="dtype" id="dimed" value="type_medical">
             <label class="form-check-label" for="dimed">
               <h3><img src="/assets/img/di-med.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Médical</h3>
@@ -277,7 +277,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="diche">
+            <input class="form-check-input" type="radio" name="dtype" id="diche" value="type_chemical">
             <label class="form-check-label" for="diche">
               <h3><img src="/assets/img/di-che.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Chémique</h3>
@@ -289,7 +289,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="ditox">
+            <input class="form-check-input" type="radio" name="dtype" id="ditox" value="type_toxic">
             <label class="form-check-label" for="ditox">
               <h3><img src="/assets/img/di-tox.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Toxique</h3>
@@ -302,7 +302,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="direc">
+            <input class="form-check-input" type="radio" name="dtype" id="direc" value="direc">
             <label class="form-check-label" for="direc">
               <h3><img src="/assets/img/di-rec.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Recyclable</h3>
@@ -314,7 +314,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="dirc">
+            <input class="form-check-input" type="radio" name="dtype" id="dirc" value="type_brokenroad">
             <label class="form-check-label" for="dirc">
               <h3><img src="/assets/img/di-rc.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Route Cassée</h3>
@@ -326,7 +326,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="dior">
+            <input class="form-check-input" type="radio" name="dtype" id="dior" value="type_obstacleroad">
             <label class="form-check-label" for="dior">
               <h3><img src="/assets/img/di-or.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Obstacle sur la  &nbsp;&nbsp; &nbsp; &nbsp;Route</h3>
@@ -360,7 +360,7 @@
               <span class="input-group-text" id="basic-addon1">➤</span>
             </div>
             <input type="text" class="form-control" placeholder="Insérez le titre ici" aria-label="Username"
-              aria-describedby="basic-addon1">
+              aria-describedby="basic-addon1" id="texttitle">
           </div>
           <p class="card-text">Donnez un titre approprié au problème.</p>
         </div>
@@ -376,7 +376,7 @@
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">➤</span>
             </div>
-            <textarea class="form-control" placeholder="Insérez le sujet ici" aria-label="With textarea"></textarea>
+            <textarea class="form-control" placeholder="Insérez le sujet ici" aria-label="With textarea" id="textsub"></textarea>
           </div>
           <p class="card-text">Donnez une petite description rapide mais informative adaptée au problème.</p>
         </div>
@@ -393,7 +393,7 @@
               <span class="input-group-text" id="basic-addon1">➤</span>
             </div>
             <textarea class="form-control" placeholder="Insérez la description ici"
-              aria-label="With textarea"></textarea>
+              aria-label="With textarea" id="textdesc"></textarea>
           </div>
           <p class="card-text">Décrivez le problème soigneusement et profondément avec le plus de détails possible.</p>
         </div>
@@ -418,9 +418,27 @@
               <span class="input-group-text" id="basic-addon1">➤</span>
             </div>
             <input type="text" class="form-control" placeholder="Anonyme" aria-label="Username"
-              aria-describedby="basic-addon1">
+              aria-describedby="basic-addon1" id="name">
           </div>
           <p class="card-text">Insérez votre nom, si vous voulez bien sûr pour des éclaircissements.
+            Laisser vide pour un signalement anonyme.</p>
+        </div>
+      </div>
+
+      <div class="card text-white bg-secondary mb-3" style="max-width: 19rem;">
+
+        <div class="card-body">
+
+          <h5 class="card-title"> <img src="/assets/img/person-fill.png" width="30" height="30"
+              style="filter: invert(1); float: left;" alt=""> &nbsp; &nbsp;Votre Num Téléphone</h5> &nbsp;
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">➤</span>
+            </div>
+            <input type="text" class="form-control" placeholder="Anonyme" aria-label="Phone"
+              aria-describedby="basic-addon1" id="phone">
+          </div>s
+          <p class="card-text">Insérez votre numéro de téléphone, si vous voulez bien sûr pour des éclaircissements.
             Laisser vide pour un signalement anonyme.</p>
         </div>
       </div>
@@ -430,7 +448,7 @@
       <br>
       <div class="text-center"> <button type="button" (click)="back()" class="btn btn-dark">◄</button>
         &nbsp;
-        <button type="button" (click)="next()" class="btn btn-primary">Envoyer ✉</button>
+        <button type="button" (click)="send()" class="btn btn-primary">Envoyer ✉</button>
       </div>
     
     
