--- a/src/app/fr-report/fr-report.component.html
+++ b/src/app/fr-report/fr-report.component.html
@@ -302,7 +302,7 @@
       <div class="card text-white bg-secondary mb-3" style="max-width: 19rem; max-height: 6rem;">
         <div class="card-body">
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="dtype" id="direc" value="direc">
+            <input class="form-check-input" type="radio" name="dtype" id="direc" value="type_recyclable">
             <label class="form-check-label" for="direc">
               <h3><img src="/assets/img/di-rec.png" width="50" height="50" style="float: left;" alt=""> &nbsp;
                 &nbsp;Déchets &nbsp;&nbsp;&nbsp;Recyclable</h3>
@@ -437,7 +437,7 @@
             </div>
             <input type="text" class="form-control" placeholder="Anonyme" aria-label="Phone"
               aria-describedby="basic-addon1" id="phone">
-          </div>s
+          </div>
           <p class="card-text">Insérez votre numéro de téléphone, si vous voulez bien sûr pour des éclaircissements.
             Laisser vide pour un signalement anonyme.</p>
         </div>
