--- a/src/app/a-fr-reports/a-fr-reports.component.html
+++ b/src/app/a-fr-reports/a-fr-reports.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div>
-    <h5 id="step" class="text-center">List des Reports</h5>
+    <h5 id="step" class="text-center">Listes des Reports</h5>
   </div>
 
   <div>
